--- a/box/index.html
+++ b/box/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="../box/style.css">
 </head>
 <body>
-  <p>Box</p>
+  <div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo culpa inventore aliquid ratione amet voluptatem nam. Sit id doloribus nobis magni, architecto, ipsum neque suscipit deleniti quis reiciendis illo ex?</p>
+  </div>
 </body>
 </html>
